# groundbeaker-event-storming-workshop

./: README.md  flake.nix  main.py  pyproject.toml
src/groundbreaker/: __init__.py  aggregate_root.py  commands.py  entities.py  events.py
