[project]
name = "groundbreaker"
version = "0.1.0"
description = ""
authors = [
    {name = "Marco Schneider",email = "marco.schneider@active-group.de"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [

]

[tool.poetry]
packages = [{include = "groundbreaker", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
